Fixed the issues with the deduction calculator

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
         <section class="output">
-            
+            <input type="number" name="Net Monthly" id="netMonthly" placeholder="Net Monthly" disabled>
         </section>
 
         <br>
