--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <section class="topBar">
-                <h1>Checkbook Calculator</h1>
+                <h1>Colby Checkbook Calculator Corporation</h1>
             </section>
         </header>
 
@@ -19,31 +19,39 @@
                 Career choice:<select id="Careers">
                     <!-- Populated by script -->
                 </select>
-                Yearly salary:<input type="number" name="Salary" id="Salary" placeholder="Salary">
+                Yearly salary: $<input type="number" name="Salary" id="Salary" placeholder="Salary">
+                Gross Monthly Income: $<input type="number" name="Gross Monthly" placeholder="Gross Monthly" id="grossMonthly" disabled>
             </form>
 
             <section class="Deductions">
                 Deductions:
                 <form action="" id="deductionZone">
                     <div class="deductionSpacer">
+                        Federal Tax: 
                         <input type="number" name="Federal Tax" id="FT" value="12" placeholder="Federal Tax">%
                     </div>
                     <div class="deductionSpacer">
+                        State Taxes: 
                         <input type="number" name="State Taxes" id="ST" value="7" placeholder="State Taxes">%
                     </div>
                     <div class="deductionSpacer">
+                        Social Security: 
                         <input type="number" name="Social Security" id="SS" value="6.2" placeholder="Social Security">%
                     </div>
                     <div class="deductionSpacer">
+                        Medicare: 
                         <input type="number" name="Medicare" id="MC" value="1.45" placeholder="Medicare">%
                     </div>
                     <div class="deductionSpacer">
+                        State Disability: 
                         <input type="number" name="State Disability" id="SD" value="1" placeholder="State Disability">%
                     </div>
                     <div class="deductionSpacer">
+                        Retirement Investment: 
                         <input type="number" name="Retirement Inventment" id="RI" value="5" placeholder="Retirement investment">%
                     </div>
                     <div class="deductionSpacer">
+                        Medical Insurance: 
                         $<input type="number" name="Medical Insurance" id="MI" value="180" placeholder="Medical Insurance">
                     </div>
                     <div class="deductionSpacer totalDeductions">
@@ -55,13 +63,15 @@
 
 
         <section class="output">
+            Net Monthly Income: $
             <input type="number" name="Net Monthly" id="netMonthly" placeholder="Net Monthly" disabled>
+            Maximum Monthly House Payment: $
+            <input type="number" name="house payment" id="housePayment" placeholder="House Payment" disabled>
         </section>
 
         <br>
         <footer>
             Copyright Colby Kirk 2023, any problems in the operation of this product are entirely issues of skill.
-            <p class="finetext">Please note that any skill issues are mine and mine alone</p>
         </footer>
 
 
