forgor to save an html thing

--- a/index.html
+++ b/index.html
@@ -81,10 +81,8 @@
             <div class="checkRow">
                 <input type="date">
                 <input type="text" id="" placeholder="Transaction Description">
-                <select name="transactionType" id="">
-                    <option value="1">Deposit</option>
-                    <option value="-1">Withdrawal</option>
-                </select>
+                <input type="number" id="" placeholder="">
+                <input type="number" id="" placeholder="">
                 <input type="number" id="" placeholder="Amount">
                 <input type="number" id="" placeholder="Balance" disabled>
             </div>
