nvm this is the final commit

--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
 
 
         <footer>
-            Copyright Colby Kirk 2023, any problems in the operation of this product are entirely issues of skill.
+            <a href="https://www.youtube.com/watch?v=thOifuHs6eY">Copyright Colby Kirk 2023, any problems in the operation of this product are entirely issues of skill.</a>
+            
         </footer>
 
         <script src="/js/calculatorScript.js"></script>
